Fixed carousel buttons overlapping text

--- a/_scss/layout/_default.scss
+++ b/_scss/layout/_default.scss
@@ -239,6 +239,11 @@ img.faded {
 
 .carousel-inner {
   overflow: visible;
+
+  .arrow {
+    position: relative;
+    z-index: 1000;
+  }
 }
 
 /* SELLING POINTS */
